--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "lucide-react": "^0.372.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
@@ -18,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
