--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
