--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "classnames": "^2.5.1",
     "lucide-react": "^0.372.0",
     "next": "14.2.1",
     "react": "^18",
