--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-jest": "^29.7.0",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.12.1",
+    "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
