--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
+    "bcrypt": "^5.1.1",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
