--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prisma": "^5.12.1",
     "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.23.8"
   }
 }
