--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@hookform/resolvers": "^3.3.4",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
@@ -33,6 +34,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.12.1",
+    "react-hook-form": "^7.51.4",
     "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
