--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
@@ -36,6 +38,7 @@
     "prisma": "^5.12.1",
     "react-hook-form": "^7.51.4",
     "react-test-renderer": "^18.3.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "zod": "^3.23.8"
