--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.372.0",
-    "next": "14.2.1",
+    "next": "^14.3.0-canary.61",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "theme-change": "^2.5.0"
