--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/client": "^5.12.1",
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.372.0",
-    "next": "^14.3.0-canary.61",
+    "next": "^15.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
