--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.12.1",
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.372.0",
+    "mongodb": "^6.12.0",
     "next": "^15.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -44,5 +45,10 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "zod": "^3.23.8"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
