--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "bcryptjs": "^2.4.3",
+    "cli-table3": "^0.6.5",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.12.0",
     "next": "^15.1.4",
